--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage: https://github.com/ag1le0/register_broadcast_receiver
 
 environment:
-  sdk: '>=2.18.1 <3.0.0'
+  sdk: ">=2.6.0 <3.0.0"
   flutter: ">=2.5.0"
 
 dependencies:
@@ -15,7 +15,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
 
